# hi-doc

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/annotated-string/: Cargo.toml
crates/annotated-string/src/: annotated_range.rs  annotation.rs  lib.rs  rope.rs
crates/ass-stroke/: Cargo.toml
crates/ass-stroke/src/: annotation.rs  anomaly_fixer.rs  chars.rs  formatting.rs  lib.rs  segment.rs  single_line.rs
crates/hi-doc/: Cargo.toml
crates/hi-doc/examples/: annotate_snippets.rs  basic.rs  fullwidth_marker.rs  readme.rs  single_line_multi_range.rs
crates/hi-doc/src/: annotation.rs  anomaly_fixer.rs  associated_data.rs  chars.rs  formatting.rs  inline.rs  lib.rs  segment.rs  single_line.rs
crates/unicode-box-drawing/: Cargo.toml
crates/unicode-box-drawing/src/: lib.rs
