[workspace]
package.version = "0.2.1"
package.license = "MIT"
resolver = "3"

members = ["crates/*"]

[workspace.dependencies]
unicode-box-drawing = { path = "./crates/unicode-box-drawing" }
ouroboros = "0.18.3"
itertools = "0.14.0"
hi-doc-jumprope = { version = "1.2.0", default-features = false }
annotated-string = { path = "./crates/annotated-string" }
