[workspace]
package.version = "0.2.1"
package.license = "MIT"
package.repository = "https://github.com/CertainLach/hi-doc"
resolver = "3"

members = ["crates/*"]

[workspace.dependencies]
unicode-box-drawing = { path = "./crates/unicode-box-drawing" }
ouroboros = "0.18.3"
itertools = "0.14.0"
hi-doc-jumprope = { version = "1.2.0" }
annotated-string = { path = "./crates/annotated-string" }
