[workspace]
package.version = "0.3.0"
package.license = "MIT"
package.repository = "https://github.com/CertainLach/hi-doc"
resolver = "3"

members = ["crates/*"]

[workspace.dependencies]
unicode-box-drawing = { version = "0.3.0", path = "./crates/unicode-box-drawing" }
ouroboros = "0.18.5"
itertools = "0.14.0"
hi-doc-jumprope = { version = "1.2.1" }
annotated-string = { version = "0.3.0", path = "./crates/annotated-string" }
