[package]
name = "annotated-string"
description = "String with ability to annotate (format) its individual fragments"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hi-doc-jumprope = { workspace = true, optional = true }
itertools.workspace = true
ouroboros.workspace = true

[features]
default = ["rope"]
rope = ["hi-doc-jumprope"]
