[package]
name = "hi-doc"
description = "Diagnostics formatting library"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
smallvec = "1.13.2"
range-map = "0.2.0"
random_color = "1.0.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
num-traits = "0.2.18"
hi-doc-jumprope = {version = "1.2.0", default-features = false}
ouroboros = "0.18.3"
itertools = "0.14.0"
