[package]
name = "hi-doc"
description = "Diagnostics formatting library"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
smallvec = "1.13.2"
range-map = "0.2.0"
random_color = "1.0.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
num-traits = "0.2.18"
tree-sitter-highlight = { version = "0.24.7", optional = true }
extension-trait = "1.0.2"

unicode-box-drawing.workspace = true
itertools.workspace = true
annotated-string.workspace = true

[dev-dependencies]
tree-sitter-rust = "0.23.2"

[features]
default = ["tree-sitter"]
tree-sitter = ["tree-sitter-highlight"]
