[package]
name = "hi-doc"
description = "Diagnostics formatting library"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
smallvec = "1.15.1"
range-map = "0.2.0"
random_color = "1.1.0"
rand = { version = "0.9.2", default-features = false, features = ["small_rng"] }
num-traits = "0.2.19"
tree-sitter-highlight = { version = "0.26.3", optional = true }
extension-trait = "1.0.2"

unicode-box-drawing.workspace = true
itertools.workspace = true
annotated-string.workspace = true

[dev-dependencies]
tree-sitter-rust = "0.24.0"

[features]
default = ["tree-sitter"]
tree-sitter = ["tree-sitter-highlight"]
